# TactileWeb

./: README.md
.github/actions/tactility/: action.yml
.github/workflows/: autobuild.yml
tactility-src/: CMakeLists.txt  manifest.properties  tactility.py
tactility-src/main/: CMakeLists.txt
tactility-src/main/Source/: TactileWeb.cpp  esp_cxx_fix.cpp
tactility-src/main/Source/html2text/: html2text.cpp  html2text.h
